test/conformance/chainsaw/policy-validation/cleanup-policy/invalid-variable/rbac.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: test-cleanup-invalid-variable
rules:
- apiGroups:
  - ""
  resources:
  - pods
  verbs:
  - delete
  - list
  - get
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: test-cleanup-invalid-variable
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: test-cleanup-invalid-variable
subjects:
- kind: ServiceAccount
  name: kyverno-cleanup-controller
  namespace: kyverno
