test/conformance/chainsaw/policy-validation/cleanup-policy/invalid-variable/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: invalid-variable
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: rbac.yaml
  - name: step-02
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: policy.yaml
